--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "italy = countries[-3]# 'Italy'\n",
+    "italy = countries[# 'Italy'\n",
     "italy"
    ]
   },
