--- a/index.ipynb
+++ b/index.ipynb
@@ -209,11 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "italy=countries[-3]\n"
+    "italy=countries[-3]\n",
+    "italy"
    ]
   },
   {
